# DL_Based-Classification-of-Alzheimer-Disease

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  dvc.yaml  evaluate_model.py  params.yaml  prepare_data.py  pyproject.toml  streamlit_alibi_app.py  streamlit_app.py  train_model.py
.dvc/: config
.github/workflows/: ci.yml
data/augmented_alzheimer/: normalization_stats.json
dataset/: classificationdataset.py
explanations/: streamlit_app.py  streamlit_webui.py  webui_app.py
models/: dummy_model.py  resnet18_model.py  resnet34_model.py  resnet50_model.py
