[tool.poetry]
name = "Deep Learning-Based Classification of Alzheimer's Disease Using Augmented Brain MRI Scans"
version = "0.1.0"
description = ""
authors = ["hajarasgari <hajar_asgari@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.7.0"
torchvision = "^0.22.0"
dvc = "^3.59.2"
streamlit = "^1.45.0"
alibi = "^0.9.6"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
kagglehub = "^0.3.12"
pytorch-lightning = "^2.5.1"
seaborn = "^0.13.2"
shap = "^0.47.2"
captum = "^0.8.0"
lime = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
